<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlSetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.huy.managertimer.activity.SettingActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_13sdp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ivArrowSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c_i_t"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="#000"
                    android:gravity="center_horizontal"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thời gian làm (phút):" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:gravity="right"
                    android:id="@+id/tv_workTime"/>
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_13sdp"
                android:max="120"
                android:progress="25"
                android:id="@+id/sb_workTime"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/th_i_gian_ngh_ph_t" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:gravity="right"
                    android:id="@+id/tv_breakTime"/>
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_13sdp"
                android:max="30"
                android:progress="5"
                android:id="@+id/sb_breakTime"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
               />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/k_ch_ho_t_ngh_d_i"
                    android:id="@+id/tv_longBreak"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw_longBreak"
                    android:checked="true"
                    android:layout_alignParentRight="true"
                    android:thumbTint="@color/colorPrimary"

                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_6sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/th_i_gian_ngh_d_i_ph_t"
                    android:id="@+id/tv_lBreak"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:gravity="right"
                    android:id="@+id/tv_longBreakTime"/>
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_13sdp"
                android:max="90"
                android:progress="20"
                android:id="@+id/sb_longBreakTime"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_phi_n_l_m_vi_c_tr_c_phi_n_ngh_d_i"
                    android:id="@+id/tv_SessBefLongBreak"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:gravity="right"
                    android:id="@+id/tv_SessBefLongBTime"/>
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_13sdp"
                android:max="10"
                android:progress="4"
                android:id="@+id/sb_SessBefLongBTime"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/_6sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/th_ng_b_o"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/textView"
                android:textColor="#000"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ch_rung"
                    android:id="@+id/tv_shakeMode"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw_shakeMode"
                    android:checked="true"
                    android:layout_alignParentRight="true"
                    android:thumbTint="@color/colorPrimary"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_thanh"
                    android:id="@+id/tv_sound"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw_soundMode"
                    android:checked="true"
                    android:layout_alignParentRight="true"
                    android:thumbTint="@color/colorPrimary"
                  />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ki_u"
                    android:id="@+id/tv_typeSound"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_typeSound"
                    android:layout_centerInParent="true"
                  >
                </Spinner>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_l_ng"
                    android:id="@+id/tv_volume"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_6sdp"
                    android:max="100"
                    android:progress="50"
                    android:id="@+id/sb_volume"
                    android:layout_toRightOf="@id/tv_volume"
                    android:thumbTint="@color/colorPrimary"
                    android:progressTint="@color/colorPrimary"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/_6sdp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:text="@string/kh_c"
                android:textColor="#000"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giao_di_n"
                    android:id="@+id/tv_color"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_color"
                    android:layout_centerInParent="true"
                   >
                </Spinner>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_t_m_thanh_trong_phi_n_l_m_vi_c"
                    android:id="@+id/tv_soundMode"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw_silenceMode"
                    android:layout_alignParentRight="true"
                    android:thumbTint="@color/colorPrimary"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_t_wifi_trong_phi_n_l_m_vi_c"
                    android:id="@+id/tv_wifiMode"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sw_wifiMode"
                    android:layout_alignParentRight="true"
                    android:thumbTint="@color/colorPrimary"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
